--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,33 @@
   /* text-align: center; */
   background: url(/public/images/title.png) no-repeat;
   background-size: cover;
+  flex-direction: flex-end;
 }
 
-button{
-  background: url(/public/images/StartBtn.png) no-repeat;
-  /* width: 400px;
-  height: 200px; */
+.btn{
+  width: 500px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  padding: 5.5%;
+}
+
+.btn1{
+    /* background-color: transparent;/ */
+    background: url(/public/images/StartBtn.png) no-repeat;
+    border: none;
+    width: 460px;
+    height: 140px;
+}
+.btn2{
+  /* background-color: transparent;/ */
+  background: url(/public/images/EndingCntBtn.png) no-repeat;
+  border: none;
+  width: 460px;
+  height: 140px;
 }
 /* 
 .App-logo {s
