--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 
-.div1{
+.background{
   width: 100vw;
   height: 100vh;
   /* text-align: center; */
@@ -9,9 +9,8 @@
 }
 
 .btn{
-  width: 500px;
   position: absolute;
-  left: 0;
+  left: 3em;
   bottom: 0;
   width: 500px;
   display: flex;
@@ -19,20 +18,21 @@
   padding: 5.5%;
 }
 
-.btn1{
+.StartBtn{
     /* background-color: transparent;/ */
     background: url(/public/images/StartBtn.png) no-repeat;
-    border: none;
-    width: 460px;
-    height: 140px;
 }
-.btn2{
+.EndingCntBtn{
   /* background-color: transparent;/ */
   background: url(/public/images/EndingCntBtn.png) no-repeat;
-  border: none;
-  width: 460px;
-  height: 140px;
 }
+
+.EndingCntBtn, .StartBtn{
+  border: none;
+  width: 40em;
+  height: 10em;
+}
+
 @keyframes moveUp {
   0% {
     transform: translateY(0);
@@ -42,7 +42,7 @@
   }
 }
 
-.btn1:hover,
-.btn2:hover {
+.StartBtn:hover,
+.EndingCntBtn:hover {
   animation: moveUp 0.3s ease forwards; /* 호버 시 애니메이션 적용 */
 }
