핸드폰 화면 성공적이게 띄우기

--- a/src/components/css/phoneHome.css
+++ b/src/components/css/phoneHome.css
@@ -1,10 +1,13 @@
 body{
-    /* background-image: url(../../../public/images/phone_wallpaper.png); */
     background-size: cover;
     background-repeat: no-repeat;
+    overflow: hidden; 
+}
+
+.background{
+    background-image: url(../../../public/images/phone_wallpaper.png);
     width: 400px; 
     height: 600px; 
-    overflow: hidden; 
 }
 
 .underbar{
