--- a/src/components/css/all.css
+++ b/src/components/css/all.css
@@ -4,6 +4,12 @@
 } */
 
 *{
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+    background-repeat: no-repeat;
     cursor: url(/public/images/cursor.png), auto;
     /* font-family: 'neodgm'; */
 }
