--- a/src/components/css/story1.css
+++ b/src/components/css/story1.css
@@ -2,27 +2,25 @@ body{
     background-color: black;
 }
 
-.container{
+.kimyeoju{
+    display: flex;
     position: relative;
     width: 100vw;
     height: 100vh;
-}
-.kimyeoju{
-    position: absolute;
-    bottom: 0;
-    /* left: 50%; */
-    /* transform: translateX(-50%); */
-    display: flex;
-    justify-content: space-between;
-    width: 200px; /* 이미지의 너비에 맞게 조절하세요 */
+    align-items: flex-end;
 }
 
 .kimyeojuImg{
-    width: 480px;
-    height: auto; /* 비율 유지를 위해 */
+    position: absolute;
+    width: 600px;
+    height: auto; 
+    z-index: 1;
 }
 
 .dialogueWindow1{
-    width: 1000px;
+    position: absolute;
+    width: 1170px;
     height: auto;
+    z-index: 2;
+    right: 0;
 }
