phoneNumber 클래스 이름 중복 변경, 메세지 화면 이미지 추가

--- a/src/components/css/phoneNumber.css
+++ b/src/components/css/phoneNumber.css
@@ -1,5 +1,5 @@
-.background{
-    background-color: rgb(197, 0, 151);
+.background2{
+    background-color: rgb(235, 153, 216);
 }
 
 .homeBtn{
@@ -7,7 +7,7 @@
     margin-top: 0.6em;
 }
 
-.container{
+.container2{
     background-color: rgb(255, 245, 253);
 }
 
