애니메이션 추가

--- a/src/components/css/question.css
+++ b/src/components/css/question.css
@@ -4,6 +4,7 @@
     background: linear-gradient( #2341AA, #08102B);
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .question{
@@ -16,6 +17,7 @@
     width: 600px;
     height: 600px;
     background-color: aquamarine;
+    margin: 30px;
 }
 
 .questionTitle{
@@ -30,5 +32,23 @@
 
 .qRadio{
     font-size: 35px;
-    margin: 5%;
+    margin: 50px;
+}
+
+
+input[type='radio']{
+    -webkit-appearance: none; 
+    -moz-appearance: none; 
+    appearance: none; 
+    width: 20px;
+    height: 20px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    margin-left: 50px;
+}
+
+input[type='radio']:checked {
+    border: 3px solid #2341AA; 
+    background-color: white;
+    box-shadow: 0 0 0 2px white;
 }
