--- a/src/components/css/story1.css
+++ b/src/components/css/story1.css
@@ -5,6 +5,7 @@
     width: 100vw;
     height: 100vh;
     align-items: flex-end;
+    justify-content: center;
 }
 
 .name{
@@ -39,6 +40,7 @@
     height: auto; 
     z-index: 1;
 }
+/*/////////////////////////////////////////////////////////////////////////////////*/
 
 .BaekleehyunImg{
     margin-left: 3%;
@@ -53,3 +55,6 @@
     z-index: 2;
     right: 0;
 }
+/*/////////////////////////////////////////////////////////////////////////////////*/
+
+/*/////////////////////////////////////////////////////////////////////////////////*/
