--- a/src/components/css/start.css
+++ b/src/components/css/start.css
@@ -44,7 +44,7 @@
   
   .StartBtn:hover,
   .EndingCntBtn:hover {
-    animation: moveUp 0.3s ease forwards; /* 호버 시 애니메이션 적용 */
+    animation: moveUp 0.3s ease forwards; 
   }
 
   .loading {
@@ -53,14 +53,14 @@
     background-color: rgb(255, 197, 250);
     position: relative;
     display: flex;
-    justify-content: center; /* 텍스트를 수평으로 가운데로 정렬 */
-    align-items: center; /* 텍스트를 수직으로 가운데로 정렬 */
+    justify-content: center;
+    align-items: center;
 }
 
 .loading img {
     position: absolute;
-    bottom: 0; /* 하단에 정렬 */
-    right: 0; /* 오른쪽에 정렬 */
+    bottom: 0;
+    right: 0; 
     width: 40vw;
 }
 
