핸드폰 아이콘 이미지 추가, 이미지 이름 변경

--- a/src/components/css/all.css
+++ b/src/components/css/all.css
@@ -40,3 +40,12 @@ button:hover,
 input[type="radio"]:hover {
     cursor: url('/public/images/cursor2.png'), auto;
 }
+
+.preBtn{
+    background-image: url(../../../public/images/phone_previousIcon.png);
+    width: 30px;
+    height: 30px;
+    float: left;
+    margin-top: 10px;
+    margin-left: 10px;
+}
