--- a/src/components/css/phoneHome.css
+++ b/src/components/css/phoneHome.css
@@ -4,7 +4,7 @@ body{
     overflow: hidden; 
 }
 
-.background{
+.background1{
     background-image: url(../../../public/images/phone_wallpaper.png);
     width: 420px; 
     height: 670px; 
