--- a/src/components/css/chapterTitle.css
+++ b/src/components/css/chapterTitle.css
@@ -1,7 +1,13 @@
 .background5{
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #A87BE2);
     animation: gradient 15s ease infinite;
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    flex-direction: flex-end;
+    position: absolute;
 }
+
 
 @keyframes gradient {
 0%  {background-position: 0% 50%;}
