style 중복 적용 이슈 해결

--- a/src/components/css/phoneMessage.module.css
+++ b/src/components/css/phoneMessage.module.css
@@ -3,10 +3,10 @@
     height: 670px; 
 }
 
-.background3{
+.background{
     background-color: blue;
 }
 
-.background4{
+.background{
     background-image: url(../../../public/images/phone_message1.png);
 }
