--- a/src/components/css/chapterTitle.module.css
+++ b/src/components/css/chapterTitle.module.css
@@ -1,4 +1,4 @@
-.background5{
+.background{
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #A87BE2);
     animation: gradient 15s ease infinite;
     width: 100vw;
