a href 태그 삭제(다른 코드로 수정), 메세지 페이지 안나오는 오류 수정

--- a/src/components/css/phoneNumber.module.css
+++ b/src/components/css/phoneNumber.module.css
@@ -19,3 +19,11 @@ button{
     margin-top: 1em;
 }
 
+.preBtn{
+    background-image: url(../../../public/images/phone_previousIcon.png);
+    width: 30px;
+    height: 30px;
+    float: left;
+    margin-top: 10px;
+    margin-left: 10px;
+}
