--- a/src/components/css/story1.module.css
+++ b/src/components/css/story1.module.css
@@ -19,8 +19,7 @@
 
 .dialogue{
     font-size: 40px;
-    /* margin-left: -9%;
-    margin-bottom: 14%; */
+    margin-top: 30px;
     z-index: 5;
 }
 
