--- a/src/components/css/story1.module.css
+++ b/src/components/css/story1.module.css
@@ -42,13 +42,6 @@
     height: auto; 
     z-index: 1;
 }
-/*/////////////////////////////////////////////////////////////////////////////////*/
-
-.BaekleehyunImg{
-    margin-left: 3%;
-    margin-bottom: 7%;
-    width: 30vw;
-}
 
 .dialogueWindow1{
     position: absolute;
@@ -56,6 +49,31 @@
     height: auto;
     z-index: 2;
     right: 0;
+    
+}
+
+.fadeOut {
+    animation: fadeOut 0.1s forwards;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 /*/////////////////////////////////////////////////////////////////////////////////*/
 
