--- a/src/components/css/story2.module.css
+++ b/src/components/css/story2.module.css
@@ -50,3 +50,27 @@
     z-index: 2;
     right: 0;
 }
+
+.fadeOut {
+    animation: fadeOut 0.1s forwards;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
