start 페이지 음악 넣기

--- a/src/components/css/start.module.css
+++ b/src/components/css/start.module.css
@@ -67,3 +67,10 @@
 .loadingText {
     font-size: 60px;
 }
+
+.MusicBtn{
+  width: 30px;
+  position: relative;
+  margin-right: 30px;
+  margin-top: 30px;
+}
