질문 페이지 수정

--- a/src/components/css/all.css
+++ b/src/components/css/all.css
@@ -38,7 +38,7 @@ body {
 a:hover,
 button:hover,
 input[type="radio"]:hover {
-    cursor: url('/public/images/cursor2.png'), auto;
+    cursor: url('/public/images/cursor.png'), auto;
 }
 
 .background{
