--- a/src/components/css/question.module.css
+++ b/src/components/css/question.module.css
@@ -16,7 +16,7 @@
 .questionImg{
     width: 600px;
     height: 600px;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     margin: 30px;
 }
 
