--- a/src/components/css/story2.module.css
+++ b/src/components/css/story2.module.css
@@ -75,7 +75,6 @@
     }
 }
 
-
 .container2{
     background-image: url(/public/images/background_img1.png);
     display: flex;
@@ -85,49 +84,13 @@
     align-items: flex-end;
     justify-content: center;
 }
-
 .silhouette{
     z-index: 2;
     position: absolute;
+
 }
 
-@keyframes fadeInLeft {
-    0% {
-        opacity: 0;
-        transform: translate3d(-100%, 0, 0);
-    }
-    to {
-        opacity: 1;
-        transform: translateZ(0);
-    }
-}
-
-.ss{
-    position: relative;
-    z-index: 4;
-    animation: fadeInLeft 1s;
-}
-
-.btn{
-    position: relative;
-    z-index: 6;
-    width: 600px;
-}
-
-@keyframes moveUp {
-    0% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: translateY(-10px);
-    }
-  }
-
-  .btn:hover{
-    animation: moveUp 0.3s ease forwards; /* 호버 시 애니메이션 적용 */
-  }
-
-  .selectImgDiv{
+.selectImgDiv{
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -142,4 +105,48 @@
     z-index: 4;
     animation: fadeInLeft 1s;
 }
+
+.selectButtons{
+    width: 400px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.selectButton{
+    position: relative;
+    z-index: 6;
+    min-width: 400px;
+    height: 80px;
+    /* margin: 100px; */
+    background-color: aquamarine;
+    font-size: 2rem;
+}
+
+.selectButton:hover{
+    animation: moveUp 0.3s ease forwards; /* 호버 시 애니메이션 적용 */
+    background-color: blue;
+}
+
+@keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        transform: translate3d(-100%, 0, 0);
+    }
+    to {
+        opacity: 1;
+        transform: translateZ(0);
+    }
+}
+
+@keyframes moveUp {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-10px);
+    }
+  }
+
+
 
