--- a/src/components/css/all.css
+++ b/src/components/css/all.css
@@ -28,7 +28,7 @@
     max-height: 100%;
     overflow: hidden;
     background-repeat: no-repeat;
-    font-family: 'HeirofLight';
+    /* font-family: 'HeirofLight'; */
 }
 
 a:hover,
