--- a/src/components/css/Dialogue.module.css
+++ b/src/components/css/Dialogue.module.css
@@ -1,4 +1,4 @@
-.container{
+.container1{
     background-image: url(/public/images/background_school.png);
     display: flex;
     position: relative;
