--- a/src/components/css/goodEnd.module.css
+++ b/src/components/css/goodEnd.module.css
@@ -4,21 +4,28 @@
     font-weight: normal;
     font-style: normal;
 }
-html, body{
-    font-family: 'ChosunGs';
 
-}
-
-.background{
-    /* font-family: 'ChosunGs'; */
-    background-image: url(/public/images/END_GoodStudentCouncil.png);
+.GoodStudentCouncil, 
+.WaitingPerson,
+.BaekLeeHyunGoodEnding{
     width: 100vw;
     height: 100vh;
     background-size: cover;
-    /* flex-direction: flex-end; */
     position: relative;
     display: flex;
     justify-content: center;
+}
+
+.GoodStudentCouncil{
+    background-image: url(/public/images/END_GoodStudentCouncil.png);
+}
+
+.WaitingPerson{
+    /* 배경이미지 */
+}
+
+.BaekLeeHyunGoodEnding{
+    /* 배경이미지 */
 }
 
 .endingTitle{
@@ -32,12 +39,69 @@ html, body{
 
 .endingComment{
     position: absolute;
-    width: 1500px;
-    height: 140px;
-    bottom: 0px;
+    width: 1000px;
+    height: 80px;
+    bottom: 40px;
     font-size: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    background-color: rgba(ff, ff, ff, 0.9);
-    box-shadow: 20px 20px 20px 20px #000;
-    border-radius: 300px 300px 0 0;
+    background-color: #fff;
+    border: 1px #000 solid;
+}
+
+/* ************************************************** */
+
+.container1{
+    background-image: url(/public/images/background_school.png);
+    display: flex;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    align-items: flex-end;
+    justify-content: center;
+    background-size: cover;
+}
+
+.name{
+    font-size: 50px;
+    z-index: 5;
+    margin-bottom: 6%;
+    margin-top: 4.5%;
+    padding-left: 4.5%;
+}
+
+.dialogue{
+    font-size: 40px;
+    margin-top: 30px;
+    z-index: 5;
+}
+
+.nameAndDialogue{
+    z-index: 5;
+    width: 60vw;
+    height: 26vw;
+    margin-right: 3vw;
+    margin-bottom: 2vw;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+}
+
+.kimyeojuImg{
+    position: absolute;
+    left: -0.7%;
+    width: 40vw;
+    height: auto; 
+    z-index: 1;
+}
+
+.dialogueWindow1{
+    position: absolute;
+    width: 75vw;
+    height: auto;
+    z-index: 2;
+    right: 0;
 }
