--- a/src/components/css/Dialogue.module.css
+++ b/src/components/css/Dialogue.module.css
@@ -1,5 +1,4 @@
-.container1{
-    /* background-image: url(/public/images/background/background_school.png); */
+.container1 {
     display: flex;
     position: relative;
     width: 100vw;
@@ -7,29 +6,29 @@
     align-items: flex-end;
     justify-content: center;
     background-size: cover;
-}
-
-.background{
+  }
+  
+  .background {
     width: 100vw;
     height: 100vh;
     position: relative;
-}
-
-.name{
+  }
+  
+  .name {
     font-size: 50px;
     z-index: 5;
     margin-bottom: 6%;
     margin-top: 4.5%;
     padding-left: 4.5%;
-}
-
-.dialogue{
+  }
+  
+  .dialogue {
     font-size: 40px;
     margin-top: 30px;
     z-index: 5;
-}
-
-.nameAndDialogue{
+  }
+  
+  .nameAndDialogue {
     z-index: 5;
     width: 60vw;
     height: 26vw;
@@ -39,122 +38,120 @@
     right: 0;
     bottom: 0;
     overflow: hidden;
-}
-
-.kimyeojuImg{
+  }
+  
+  .kimyeojuImg {
     position: absolute;
     left: -0.7%;
     width: 40vw;
-    height: auto; 
+    height: auto;
     z-index: 1;
-}
-
-.dialogueWindow1{
+  }
+  
+  .dialogueWindow1 {
     position: absolute;
     width: 75vw;
     height: auto;
     z-index: 2;
     right: 0;
-}
-
-.fadeOut {
+  }
+  
+  .fadeOut {
     animation: fadeOut 0.1s forwards;
-}
-
-@keyframes fadeOut {
+  }
+  
+  @keyframes fadeOut {
     from {
-        opacity: 1;
+      opacity: 1;
     }
     to {
-        opacity: 0;
+      opacity: 0;
     }
-}
-
-@keyframes fadeInUp {
+  }
+  
+  @keyframes fadeInUp {
     0% {
-        opacity: 0;
-        transform: translateY(20px);
+      opacity: 0;
+      transform: translateY(20px);
     }
     100% {
-        opacity: 1;
-        transform: translateY(0);
+      opacity: 1;
+      transform: translateY(0);
     }
-}
-
-.container2{
-    background-image: url(/public/images/background/background_img1.png);
+  }
+  
+  .container2 {
     display: flex;
     position: relative;
     width: 100vw;
     height: 100vh;
-    /* align-items: flex-end; */
     justify-content: center;
-}
-.silhouette{
+    align-items: center;
+    background-image: url("/public/images/background/background_img1.png");
+  }
+  
+  .silhouette {
     z-index: 2;
     position: absolute;
     bottom: 0;
-}
-
-.selectImgDiv{
-    width: 100vw;
-    height: 100vh;
+  }
+  
+  .selectImgDiv {
     display: flex;
-    justify-content: center; /* 수평 가운데 정렬 */
-    align-items: center; /* 수직 가운데 정렬 */
-    z-index: 5;
+    justify-content: center;
+    align-items: center;
     position: absolute;
-}
-
-.selectImg{
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+  }
+  
+  .selectImg {
     position: relative;
     z-index: 4;
     animation: fadeInLeft 1s;
-}
-
-.selectButtons{
-    display: flex; /* Flexbox 컨테이너로 설정 */
-    flex-direction: row; /* 가로 방향으로 배치 */
-    justify-content: center; /* 수평 가운데 정렬 */
-    align-items: center; /* 수직 가운데 정렬 */
+  }
+  
+  .selectButtons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     z-index: 6;
-    width: auto; /* 가로 너비 자동 설정 */
-    height: auto; /* 높이 자동 설정 */
-}
-
-.selectButton{
-    background-image: url(/public/images/button/selectBtn1.svg);
+    width: 100%;
+    height: auto;
+  }
+  
+  .selectButton {
+    background-image: url("/public/images/button/selectBtn1.svg");
     position: relative;
     z-index: 6;
-    min-width: 400px;
+    width: 400px;
     height: 600px;
-    /* min-width: 800px;
-    height: 200px; */
     background-color: aquamarine;
     font-size: 2.35rem;
-    margin: 50px; /* 버튼 사이에 여백 추가 */
+    margin: 50px;
     border: 2px #000 solid;
     border-radius: 15px;
-}
-
-.selectButton:hover{
-    animation: moveUp 0.3s ease forwards; /* 호버 시 애니메이션 적용 */
+  }
+  
+  .selectButton:hover {
+    animation: moveUp 0.3s ease forwards;
     background-color: blue;
-}
-
-@keyframes fadeInLeft {
+  }
+  
+  @keyframes fadeInLeft {
     0% {
-        opacity: 0;
-        transform: translate3d(-100%, 0, 0);
+      opacity: 0;
+      transform: translate3d(-100%, 0, 0);
     }
     to {
-        opacity: 1;
-        transform: translateZ(0);
+      opacity: 1;
+      transform: translateZ(0);
     }
-}
-
-@keyframes moveUp {
+  }
+  
+  @keyframes moveUp {
     0% {
       transform: translateY(0);
     }
@@ -162,6 +159,3 @@
       transform: translateY(-10px);
     }
   }
-
-
-
