이미지 경로 변경

--- a/src/components/css/question.module.css
+++ b/src/components/css/question.module.css
@@ -10,7 +10,7 @@
 }
 
 .magicHat{
-    background-image: url(/public/images/magicHat.png);
+    background-image: url(/public/images/extra/magicHat.png);
     width: 850px;
     height: 700px;
 }
