--- a/src/components/css/Dialogue.module.css
+++ b/src/components/css/Dialogue.module.css
@@ -55,6 +55,18 @@
     z-index: 2;
     right: 0;
   }
+
+  .next{
+    background-image: url(/public/images/button/nextBtn2.png);
+    background-color: transparent;
+    border: 0;
+    width: 50px;
+    height: 60px;
+    position: absolute;
+    z-index: 3;
+    right: 0;
+    bottom: 15px;
+  }
   
   .fadeOut {
     animation: fadeOut 0.1s forwards;
@@ -128,7 +140,7 @@
     z-index: 6;
     width: 400px;
     height: 600px;
-    background-color: aquamarine;
+    background-color: #fff;
     font-size: 2.35rem;
     margin: 50px;
     border: 2px #000 solid;
@@ -137,7 +149,7 @@
   
   .selectButton:hover {
     animation: moveUp 0.3s ease forwards;
-    background-color: blue;
+    background-color: #fff;
   }
   
   @keyframes fadeInLeft {
