--- a/src/components/css/Dialogue.module.css
+++ b/src/components/css/Dialogue.module.css
@@ -19,7 +19,10 @@
     z-index: 5;
     margin-bottom: 6%;
     margin-top: 4.5%;
-    padding-left: 4.5%;
+    padding-left: 2%;
+    width: 200px;
+    height: 70px;
+    text-align: center;
   }
   
   .dialogue {
