--- a/src/components/css/Dialogue.module.css
+++ b/src/components/css/Dialogue.module.css
@@ -13,6 +13,16 @@
     height: 100vh;
     position: relative;
   }
+
+.start{
+  background-image: url(/public/images/button/home.png);
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 40px;
+}
   
   .name {
     font-size: 50px;
