--- a/src/components/css/Dialogue.module.css
+++ b/src/components/css/Dialogue.module.css
@@ -136,7 +136,11 @@
     z-index: 4;
     animation: fadeInLeft 1s;
   }
-  
+
+  .selectImg.show {
+    opacity: 1;
+  }
+
   .selectButtons {
     display: flex;
     justify-content: center;
@@ -165,16 +169,16 @@
     background-color: #fff;
   }
   
-  @keyframes fadeInLeft {
+@keyframes fadeInLeft {
     0% {
-      opacity: 0;
-      transform: translate3d(-100%, 0, 0);
+        opacity: 0;
+        transform: translate3d(-100%, 0, 0);
     }
     to {
-      opacity: 1;
-      transform: translateZ(0);
+        opacity: 1;
+        transform: translateZ(0);
     }
-  }
+}
   
   @keyframes moveUp {
     0% {
