--- a/src/components/css/question.module.css
+++ b/src/components/css/question.module.css
@@ -1,12 +1,28 @@
-.background{
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient( #2341AA, #08102B);
-    display: flex;
+.background {
+    width: 100vw; 
+    height: 100vh; 
+    background: linear-gradient(137deg, #2b4ece, #08102B);
+    background-size: 800% 800%;
+ 
+    -webkit-animation: AnimationName 6s ease infinite;
+    animation: AnimationName 6s ease infinite;
+    display: flex; 
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: #fff;
+    align-items: center; 
+    flex-direction: column; 
+    color: #fff; 
+}
+ 
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+
+@keyframes AnimationName { 
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
 
 .magicHat{
@@ -14,7 +30,20 @@
     width: 850px;
     height: 700px;
     margin: 30px 0;
+    animation: float 3s ease-in-out infinite;
 }
+
+@keyframes float {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-25px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
 
 .radioLabel {
     color: #726445;
